Address review comments Refactor to remove Guava Function() dependency for SpotBugs